--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1096,16 +1096,9 @@ As the programme developed I took greater care over the form of the tutorials an
 
 ##### Organising tutorials into a linear structure, specifically in the form of a book
 
-While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x).
+While prioritising a responsive, informal, hands-on approach over pre-teaching concepts, I struggled to resolve how best to provide background concepts and explanations of coding constructs, a need which had arisen from parents in the feedback to P1 (see appendix 4.x). However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
 
-However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts. Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. After making the game from a template, these foundational chapters are available to explain underlying concepts that the starting template had initially abstracted away from the participants.
-
-However, as these tutorials took as a starting point the code of the starting template and did not attempt to explain that, they  did not however resolve the issue of participants wanting resources that explained these core constructs and underlying concepts.
-
-Thus I created opening chapter of the online manual which were more traditional in format and contained foundational knowledge. I wondered how to best frame the relationship between these chapters and the self-contained ones described above. In practice, as user had started with a template game that is already up and running, to use this resources which would have involved backtracking.
-
-
-I named this concept _meeting yourself in the middle_ to represent the possibility of retracing the process of learning from first principles. The key concept here was that after making the game from a template, these foundational chapters resources are available at any time to explain all underlying concepts that the starting template had initially abstracted away from the participants. Thus the process would have value to reinforce computing concepts present in the design. Narratively these chapters form the equivalent of a prequel for readers interested in the full story.
+Thus I created opening chapters of the online manual which were more traditional in format and explained underlying concepts that the starting template had initially abstracted away from the participants. To describe the relationship between the self-contained chapters described above and the process of backtracking to gain foundational knowledge, I used the term _meeting yourself in the middle_. In the supporting chapters this term represented the value of retracing initial steps as a way to explore the computing concepts present in the design.
 
 <!-- An example of parent Sh interaction with long form tutorial follows. Sh engaged with the long form resources. While this process did not involve dialogue, the recording of her screen allows for a detailed description of how the resources was used.
 Sh opens browswer to see list of code Examples, navigates to page, sees list of chapters, selects GDP pattern name, then follows along.
@@ -1122,20 +1115,32 @@ Interestingly, the online menus was not used by participants in any regular or c
 
 **Tensions and related to navigation of various documentations sources**
 
-The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. My initial attempts were a list of code examples in a shared google document and printed out self-contained chapters.
+<!-- The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. -->
 
-Thus, there were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code. It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
 
-While the code snippet and text resources were developed in response to one conflict they introduced new tensions. Specifically, I observed users failing or struggling to find the right resources online. I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress.
 
-In addition, I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created. For easy of navigation I also included the starting template and a link to the online book of step-by-step resources.
+<!-- Thus, there were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code.
+
+ It is this approach that we see the child Toby adopt in the vignette presented in this chapter. The second approach was to use the longer form step by step help.
+ -->
+
+
+I initially listed code examples in a shared google document and printed out self-contained chapters. While the code snippet and text resources were developed in response to the participant conflict described above they introduced new tensions.
+
+Specifically, I observed users failing or struggling to find the right resources online. I decided to create a web page using the same technology and hosting systems that housed the template game and remixes of participants to at as a navigational menu for the collection of code examples that had been created.
 
 Learning resources linked to game design patterns were presented in a grid format with colour-coded images that focused on the player experience rather than underlying coding constructs. (MOVE DOWN?)
+
+IMAGE
 
 My motivations driving this design work were to mitigate potential learner alienation from unfamiliar technical documentation through accessible and attractive design and to relating documentation to participants existing gameplay experience.
 
 
-#### Tactical structuring of the pattern collection
+<!-- For easy of navigation I also included the starting template and a link to the online book of step-by-step resources. -->
+
+<!-- I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress. -->
+
+
 
 In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements.
 
