--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -998,7 +998,12 @@ The templated game was structured to allow changes in code which were relatively
 
 While the simple changes to the game dynamics and patterns embedded in the starting template helped motivation and engagement, some participants soon began to ask how to make additions to the game which needed new code structures to be added to the framework of the template. At this stage greater support was needed as explored in the next section. This point marks the pivot to the _create_ phase on the UMC model. The shift in design from P1 to P2 involved a much more careful and structured experience for participants in use and modify stages. While I do not have comparative video and interview evidence between P1 and P2,  alignment with existing research to my journal notes of observations of engagement are useful here to build a picture of the experience.
 
-New participants in P2 all maintained a working game thus able to share at the end of each session. This compares to periods in P1 where there were extensive periods of time when the game was in a broken state and thus not shareable. My reflections as an facilitator align with research that the process of sharing creations are motivating thus, keeping games in a working / shareable state is optimal for participant engagement.
+New participants in P2 all maintained a working game thus able to share at the end of each session. This compares to periods in P1 where there were extensive periods of time when the game was in a broken state and thus not shareable. My reflections as an facilitator align with research that consistent feedback and the process of sharing creations are motivating thus, keeping games in a working / shareable state is optimal for participant engagement.
+
+
+<!-- The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
+
+While Scratch has an extensive online community allowing for remixing and showcasing of games,  the community element of the design are not is explored in this section. See instead chapter six. -->
 
 Participants needed help to access and use the key affordances in code described above. In early trials with a limited number of families, I would point out the relevant part of the code and give and ask questions like, _I wonder what would happen if you changed that gravity variable?_
 
@@ -1111,13 +1116,11 @@ Interestingly, the online menus was not used by participants in any regular or c
 <!-- As explored in the literature review, it is difficult to explore this pedagogical approach relation to other similar programmes due to the lack of data on specifics of the learning materials presented to participants. -->
 
 
-#### Using of a collection of game design patterns
+#### Structuring and using a collection of game design patterns
 
-**Tensions and related to navigation of various documentations sources**
+<!-- **Tensions and related to navigation of various documentations sources** -->
 
 <!-- The previous stage had created a variety of supporting documents and processes. However at the start of P3 I still had not managed to devise a system to communicate these options consistently and effectively to students. -->
-
-
 
 <!-- Thus, there were two main ways of approaching adding a new pattern. One to examine a code example which was built around the same code base. This would involve searching for new code constructs and notes in the code designed to orientate the learner, alerting them to the location and purpose of the relevant code.
 
@@ -1131,7 +1134,7 @@ Specifically, I observed users failing or struggling to find the right resources
 
 Learning resources linked to game design patterns were presented in a grid format with colour-coded images that focused on the player experience rather than underlying coding constructs. (MOVE DOWN?)
 
-IMAGE
+![Pattern Collection](./Pictures/pattern_collection_1.png){width=95%}
 
 My motivations driving this design work were to mitigate potential learner alienation from unfamiliar technical documentation through accessible and attractive design and to relating documentation to participants existing gameplay experience.
 
@@ -1140,35 +1143,41 @@ My motivations driving this design work were to mitigate potential learner alien
 
 <!-- I addressed this by printing step by step tutorials. However the paper based resources did not allow users to copy and paste code, a  characteristic of online code examples and tutorials which facilitates quick progress. -->
 
-
-
-In trying to organise and represent code examples to participants in a logical way I drew on existing frameworks of game elements.
-
-The design process to try to grouping participant requests was iterative and took place over an extended time frame. An example of the kind of grouping sketch used is included below as Figure 4.x.  
-
-I noted that some of these were aesthetic in nature for example; the graphical representation of game characters; adding sounds; and adding background images. Others are described in professional literature as game mechanics including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned other fundamental aspects concerning game space like the size and shape of game world and adding new levels the game.
-
-I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings. In contemporary journal notes I also explored the concept of _open-world_ approaches to structuring resources and helping learners navigate the learning experience based on choosing challenges based on their interests and appropriate difficulty levels.
+In trying to organise and represent code examples to participants in a logical way, I experimented with different categories and themes to contains the emerging game elements. I also explored the concept of mapping the different challenges by difficulty on a map via structuring via concentric rings. An example of the kind of grouping sketch used is included below as Figure 4.x.  
 
 ![Scan of Journal Sketch of early attempt at dividing features by type and difficulty](./Pictures/pattern_types_sketch.png){width=85%}
 
 _Fig 4.x. Scan of Journal Sketch of early attempt at dividing features by type and difficulty - Dated 11.3.2019_
 
-The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. I had previously used collaborative analytical techniques which drawing on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. These had been developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games, and thus build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
+The process of sketching, revising and re-sketching the elements led me to connect this process of categorisation with the work of game theorists. For example, I recognised synergies with between _open-world_ game design and my attempts to structure resources and help learners navigate the learning experience based on choosing challenges based on their interests and appropriate difficulty levels [@squire_open-ended_2008].
+
 
 <!-- NOTE SOME MOVED TO NEXT CHAPTER -->
 
-This work also aligns with the MDA framework. I was drawn also to this framework due to the similar focus to the user experience which has potential to make the process of analysis games more accessible [@olsson2014conceptual].. I then took the existing list of game elements that have been identified by students and categorised them based on a blend of these two frameworks. I made some simplifications and adaption to increase accessibility for non-professional and young people. For example, the term of aesthetics is very wide and suited simplification _game polish_.
+I had previously used collaborative analytical techniques which drawing on academic and professional interpretations of game elements [@salen_game_2006; @schell_art_2008; @tekinbas_rules_2003]. These had been developed for use in youth-oriented Game Jams to help novice game makers hack/analysis and then adapt key elements of non-digital games, and thus build participants use of language of game design concepts before engaging in digital making [@cornish_game_2018; @institute_of_play_gamestar_nodate].
 
-I introduced the following framework for P3 which we retained for P4. There were three colour themed categories of missions which existed in addition to the core challenges of the _home_ templated game. _Game mechanics_ are features to do with the actions of the game. _Game space_ patterns address the layout of the game. _Game polish_ patterns involve adding music, backgrounds, graphics and story elements.
+    As part of the introductory activity make sure students are familiar with the 5 parts of a game, or sometimes called the 5 principles of game design:
 
-In P5 I extended the scheme to included  _System and Challenge_ patterns. These explore at how different elements interact to create challenge in the game.
+    **SPACE:** Where the game takes place.
+    **GOAL:** What is the objective of the game? What are you trying to do?
+    **COMPONENTS:** What are all the objects or actors in the game?
+    **MECHANICS:** What actions take place in the game. What are the verbs involved?
+    **RULES:** What can or can’t you do in the game? What defines boundaries? Does play happen in real time or do you take turns?
+
+    Be sure to ask students what they already know about these terms or see what educated guesses they may have before giving the answers away.
+    Extract from Game Jam Guide [@cornish_game_2018]
+
+I related this simple categorisation the emerging list of requests for game features made by my participants. I noted that some patterns addressed game aesthetics (simplified to  _game polish_) for example; the graphical representation of game characters; adding sounds; and adding background images. Others could be described as _game mechanics_ including: jumping on enemies; finding a door or flag to progress to the next level; and collect all food before progressing to next level. Others concerned aspects of _game space_: the size and shape of game world; and adding new levels the game. In P5 I extended the scheme to included  _System and Challenge_ patterns. These explore at how different elements interact to create challenge in the game.
+
+<!-- I then took the existing list of game elements that have been identified by students and categorised them based on a blend of two frameworks. -->
+
+<!-- I made some simplifications and adaption to increase accessibility for non-professional and young people. For example, the term of aesthetics is very wide and suited simplification _game polish_. -->
 
 ![Game Design Themes](./Pictures/four_gdp_themes.png){width=95%}
 
-This (sub)section has described the process of categorising  different themes the game pattern collection.  Similarly this outcome of theming the patterns by function and  difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. This theme is continued in the next chapter which explores the impact on users of GDPs.  
+In retrospect, I noted that this categorisation aligns with the MDA framework which also focuses on analysis of games based on the user experience [@olsson2014conceptual]. The process of theming the patterns by function and difficulty to help build community game making activity and knowledge aligns with the work by Holopainen and colleagues on the use of pattern collections to help structure game making for adults [@holopainen2007teaching]. The theme of using professional and technical frameworks in an accessible way to facilitate the creations of novice participants is continued in the next chapter which explores the impact on users of GDPs.  
 
-The wider section has addressed the complex conflict of participants in accessing help to overcome smaller blocks to the progress.
+The section has addressed the complex conflict of participants in accessing help to overcome smaller blocks to the progress.
 
 
 <!--
@@ -1218,6 +1227,8 @@ After a discussion, a resolution to this issue in the thesis is to describe the 
 
 ### Discussion on Authenticity of Tools
 
+This chapter has exposed the tensions between the value being exposed to the complexity of code and the benefits it can bring. This section develops this theme.
+
 An inspirational aspect of _lifting the lid_ on previously unknown technology was reflected in a conversation among adult participants. They communicated a sense of awe of how much effort and coding must be involved in a professional game based on the relative complexity of the code of their simple game.  
 
     Pearl: It just shows you what goes into these games.
@@ -1225,9 +1236,9 @@ An inspirational aspect of _lifting the lid_ on previously unknown technology wa
     Pearl: You just take things for granted don’t you?
     [FIND IN 2019-03-18-ch_pa_TOCODE].
 
+Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills. 
 
-MOVED SO EDIT DOWN ?
-Analysis of the video data of participants reveals a large number of broader digital literacy skills involved in asset authoring and migration. For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
+For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
 
 <!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
 Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
@@ -1248,11 +1259,6 @@ The impact of coding tool use on instrumental agency can be explored here to dev
 
 #### Analysis in relation to existing research on related design toolsets
 
-**Retaining a working game - helps sharing**
-
-The partially working environment and immediate feedback this allowed also gave rapid access access to varied forms of face to face community activity including varied forms of playtesting and social interaction and ways to access help from peers and facilitators.
-
-While Scratch has an extensive online community allowing for remixing and showcasing of games,  the community element of the design are not is explored in this section. See instead chapter six.
 
 **Other tools and authenticity of Microworld**
 
