editing down authenticity section

--- a/_posts/thesis_chapters/2023-9-4-Design.md
+++ b/_posts/thesis_chapters/2023-9-4-Design.md
@@ -1236,71 +1236,30 @@ An inspirational aspect of _lifting the lid_ on previously unknown technology wa
     Pearl: You just take things for granted don’t you?
     [FIND IN 2019-03-18-ch_pa_TOCODE].
 
-Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills. 
+<!-- There are similarities and differences between the use of code playgrounds and templates by novices and professionals. A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
 
-For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
-
-<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
-Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
-
-There are similarities and differences between the use of code playgrounds and templates by novices and professionals. A possible interpretation of the use of a template as scaffolding provided in an educational context is that that support is inconsistent with a work place setting environment. However, the use of starter templates is also a common work place tactic.
-
-The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.  
-
-
-**Authentic tool use and instrumental agency**
-
-The impact of coding tool use on instrumental agency can be explored here to develop the previous section
-
-<!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
-
-
-
+The motivations for creating starter templates are similar. Both educators and professional template creators want to shield new users from the complexity of the underlying web-technology and instead highlight design affordances that facilitate creative agency. For the learners of this study, agency is expressed via inclusion of home interests, play with dynamics and game layout. The motivations of the professional would include experimentation to check if the framework will support desired end user features. This work helps analysis if it is worth allocating time learning the details of the framework in question.   -->
 
 #### Analysis in relation to existing research on related design toolsets
 
+**Comparing my design to Scratch and Microworlds's Design principles / heuristics:**
 
-**Other tools and authenticity of Microworld**
+<!-- Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency. -->
 
-Research on other toolsets is instructive when exploring learning design tensions involving issues of authenticity and agency.
+Existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition were explored in brief in the literature review. [@kafai_constructionism_1996-1; @kafai_mindstorms_2014].
 
-These observations support existing research on computing projects in the work of Papert [-@papert_mindstorms_1980] on Mircoworlds and subsequent research on programming tools in the constructionist tradition [@kafai_constructionism_1996-1; @kafai_mindstorms_2014].
+While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.
 
-In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
+<!-- This section compares the designed of this study with learning environment to the design factors of others exposed in research. Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling -->
+<!-- While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches []. -->
 
-This section compares the designed learning environment to the design factors of others exposed in research. In particular research on Microworlds and the Scratch tool, both tools were explored in brief in the literature review, is examined from the lenses of authenticity and agency.
+<!-- Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding. Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT. -->
 
 The process of creating a microworld with embedded concepts brought to the fore for students to bump against,
 
-While early use of microworlds as a "acceptable" authentic-ish a concept endorsed in literature on authentic approaches [].
+In scratch, the ability to reduce syntax errors through block coding was adopted. Reducing the complexity of coding environment in one of several guidelines in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005]. Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling
 
-- Why not Scratch
-- Choice of Thimble initially
-- lack of mature community
-
-While, examples of a Microworlds are diverse [@rieber_microworlds_2004], a Turtle drawing world using  LOGO can be used here as an example. In the Mathland of the turtle which speaks only LOGO, children are drawn to speak LOGO to progress. The affordances of the physical turtle provide visible motivation.  
-
-Scratch's design as a diverse multimedia tool invites experimentation and play but not in a particular field of maths or coding.
-
-Instead more general computing and design skills are imagined as outcomes. See Resnick's take on CT.
-
-#### Comparing my design to Scratch and Microworlds
-
-
-**Design principles / heuristics:**
-
-In scratch, the ability to reduce syntax errors through block coding was adopted.
-
-Reducing the complexity of coding environment in one of several guidelines ance in the process of designing toolsets to support creative coding [@resnick_reflections_2005] [@resnick_design_2005].
-
-Recap of constructionist heuristics   low-thresholds, wide-walls, high-ceiling
-
-While Resnick's principles / heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices.
-
-
-<!-- Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z. -->
-<!-- While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
-- the community as they viewed each others assets and playtested games. -->
+In this study, in contrast to the specially created tools of Scratch and Logo, the protected Microworld is built as a shield area within a more genuine ecology of authentic tool use and practices.
 
 **Simplifying the environment**
 
@@ -1313,6 +1272,17 @@ The following issues are relevant to the learner experience- other ways to enclo
 
 
 
+<!-- While Resnick's principles / heuristics provide a useful tool for designers creating tools there was in early research less guidance for practitioners supporting creative coding activities . the goal is more to provide a playground. Much less intrinsic guidance to help seed community practices. -->
+
+
+<!-- Later research on Scratch also explored the value of the community for feedback and for motivational factors. Research shows the value of the Scratch online community has the potential to x, y and z. -->
+<!-- While, there is a potential to engage with wider  community tools like remix, online sharing, and to invite  are part of the glitch code playground community, I did not ask participant to focus their attention in this direction.
+- the community as they viewed each others assets and playtested games. -->
+
+
+
+
+
 <!-- extended by Kafai and Burke to include open windows - can be used to evaluate this design and other designs.   -->
 <!-- NOTE - ADD KEY DETAILS OF THE ACCESSIBILITY / CHALLENGE OF THE CORE TOOLS SET -->
 
@@ -1320,6 +1290,27 @@ The following issues are relevant to the learner experience- other ways to enclo
 In my design, the use of GDPs in various scope forms this base: quick start activities; GDPs from a menu; novel GDPs/ -->
 
 <!-- The online only nature of the toolset does facilitate certain aspects of community participation by shifting the working space away from a desktop only environment, this facilitating some sharing by default.  -->
+
+
+
+**Authentic tool use and forms of agency**
+
+The impact of coding tool use on instrumental agency can be explored here to develop the previous section
+
+
+Analysis of the video data of participants using the more fragmented tool set used, which involve one online tool for coding and others for asset authoring, reveals a large number of broader digital literacy skills.
+
+For example, the processes of replacing a block image with a bespoke pixel sprite which comprised: file downloading; file migration using the browser and file manager; browser tab navigation; graphics tool use in Piskel (a simplified Photoshop including - crop, fill and export tools); copying and paste text code; and selecting more than one lines of text code with mouse or keyboard shortcuts. Undertaking the full process involved learning a complex chain of  these individual actions.
+
+<!-- IS THERE DUPLICATION HERE - OPERATION ALSO ANALYSE VIA AT? -->
+Some participants became remarkably adapt at this, thus transforming this chain of actions into a fluid operation. Learners who had mastered the skills were asked by others for help. The rapid adoption and transfer of these processes between community members indicated a high motivational factor for participants of incorporating self-created graphical elements, a topick which is also addressed in the following section.  
+
+
+
+<!-- **Future work** MakeCode Arcade shows promise as an easier to use microworld geared to the use of design patterns. While this is beyond the remit of this study I did gather data. However, I would regather to allow for better focus of research questions.   -->
+
+
+
 
 
 ### Authenticity of processes and documentation
